--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0px;
 	background-color: #000000;
 	overflow: hidden;
+  font-family: monospace;
 }
 
 /* canvas {
@@ -13,6 +14,10 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.5);
+  backdrop-filter: blur(10px);
+}
+#blocker.hide {
+  display: none;
 }
 
 #instructions {
