--- a/css/style-v4.css
+++ b/css/style-v4.css
@@ -14,7 +14,8 @@
 
 body {
 
-	margin: 0px;
+  height: 100dvh;
+	margin: 0;
 	background-color: #000;
 	overflow: hidden;
 
@@ -76,7 +77,7 @@ body {
 #blocker {
 	
   width: 100%;
-  height: 100lvh;
+  height: 100dvh;
   padding: 4rem;
 
   z-index: 999;
